Realtime -> MCU in changelogs

--- a/blog/2020-11-30.mdx
+++ b/blog/2020-11-30.mdx
@@ -34,7 +34,7 @@ title: November 2020
 - Users can now manually refresh dashboard charts.
 - Many UI improvements throughout the product.
 
-## Real-Time
+## MCU
 
 - Memfault now shows the last known reset for a given Device in the metrics
   browser.
