--- a/blog/2020-12-31.mdx
+++ b/blog/2020-12-31.mdx
@@ -23,7 +23,7 @@ refer to the [Bort SDK Reference docs page](https://mflt.io/android-bort-sdk).
 
 <!-- truncate -->
 
-## Real-Time
+## MCU
 
 - Developers can now attach logs to Trace Events. This feature now allows you to
   attach error codes, messages, and helpful debugging information to our already
