--- a/blog/2021-02-28.md
+++ b/blog/2021-02-28.md
@@ -30,7 +30,7 @@ View the timeline by day, drill into specific hours, and navigate to the pieces 
     </p>
 - Improve speed of deleting artifacts and devices
 
-## Real-Time
+## MCU
 
 - The [`fw_build_id.py`](https://github.com/memfault/memfault-firmware-sdk/blob/master/scripts/fw_build_id.py) script is now Python2 compatible. If you aren't using a Build ID to uniquely identify your build artifacts, you should consider starting. It saves a boat-load of time when trying to track down debug symbols.
 - The SDK now includes a central configuration header at `components/include/memfault/config.h`. Platform overrides can be defined in memfault_platform_config.h. This should make the SDK much easier to integrate into trouble-some IDE's and build setups.
