--- a/blog/2021-03-31.md
+++ b/blog/2021-03-31.md
@@ -26,7 +26,7 @@ You can find this setting under **Admin -> Users**. _This feature is only availa
       <img width="600" src="/img/blog/2021-03-31-all-traces.png"/>
     </p>
 
-## Real-Time
+## MCU
 
 - Devices with the Memfault SDK hooked up will create chunks than can be printed out over the serial console for quick and easy access. We have a [CLI tool that allows uploading chunks](http://docs.memfault.com/docs/embedded/export-chunks-over-console#post-chunks-from-logs-with-memfault-cli), but now we've made it even easier to quickly upload a chunk to Memfault for validation with the Manual Chunk Upload window.
 
