--- a/blog/2021-04-30.md
+++ b/blog/2021-04-30.md
@@ -36,7 +36,7 @@ Be on the lookout for more improvements in this area coming soon!
 - Improve response time when loading the dashboards
 - A user's email and API key can now be found by hovering over their name in the top right and selecting **Profile**.
 
-## Real-Time
+## MCU
 
 - **Viewing Device Logs in Memfault:** Memfault can now accept logs from MCU devices in the field.
     <p align="center">
