--- a/blog/2021-01-31.mdx
+++ b/blog/2021-01-31.mdx
@@ -27,7 +27,7 @@ CSV upload.
   <img width="600" src="/img/blog/2021-01-31-device-csv-upload.gif" />
 </p>
 
-## Real-Time
+## MCU
 
 - You can now download a Coredump as an .elf file, which can then be loaded into
   GDB as long as your version of GDB is compiled with core dump support. For
