--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -5,37 +5,40 @@ sidebar_label: Memfault Terminology
 # TODO: format this table in a humane way
 ---
 
-| Term                     | Description                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| ------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Artifact                 | A file or binary that is uploaded and associated with a Release. This can be a symbol file (.elf) or a firmware binary.                                                                                                                                                                                                                                                                                                                |
-| Build ID                 | A unique identifier for a given Artifact                                                                                                                                                                                                                                                                                                                                                                                               |
-| Cohort                   | Grouping of devices. Typical cohorts are "alpha", "beta", and "prod", but these can be any grouping, such as a deployment facility.                                                                                                                                                                                                                                                                                                    |
-| Coredump                 | A capture of the entire memory space of a Device which will generate a Trace in Memfault                                                                                                                                                                                                                                                                                                                                               |
-| Deployment               | When a Release is pushed to a particular Cohort. This means that any Device in the given Cohort will be able to query and update to this Release                                                                                                                                                                                                                                                                                       |
-| Device                   | An edge device that communicates with Memfault. It can report Events, be updated with new software, grouped into Cohorts, etc.                                                                                                                                                                                                                                                                                                         |
-| Device Serial            | The Unique Identifier of a Device                                                                                                                                                                                                                                                                                                                                                                                                      |
-| Event                    | A small payload of information sent from a Device. There are many types of Events, such as Heartbeat Events, Events, Device install Events, etc.                                                                                                                                                                                                                                                                                       |
-| Event - Device Install   | Events that are generated during a firmware update procedure tracking progress                                                                                                                                                                                                                                                                                                                                                         |
-| Event - Heartbeat        | Hourly Events that contain vital information about the health of a Device. Most of the data here is user defined and customizable.                                                                                                                                                                                                                                                                                                     |
-| Event - Trace            | Event captured when the device crashes or when the SDK is told to capture a trace manually.                                                                                                                                                                                                                                                                                                                                            |
-| Firmware                 | The actual firmware binary that is downloaded by the device to install. It can be a raw binary or a .zip containing multiple binaries.                                                                                                                                                                                                                                                                                                 |
-| Fleet                    | All Devices of a Project                                                                                                                                                                                                                                                                                                                                                                                                               |
-| Hardware Version         | The version of hardware of the Device. Since hardware companies typically have many revision of their product through stages of manufacturing (evt, dvt, pvt), this can be used to surface those differences. One can upload different Artifacts in the same release for different Hardware Versions                                                                                                                                   |
-| Issue                    | A logical grouping of Traces with the same signature.                                                                                                                                                                                                                                                                                                                                                                                  |
-| Issue State - Open       | An Issue has not yet been fixed and remains in the list of Issues                                                                                                                                                                                                                                                                                                                                                                      |
-| Issue State - Resolved   | An Issue has been closed and will no longer appear in the list of Issues                                                                                                                                                                                                                                                                                                                                                               |
-| Metric                   | A key-value pair representing a useful piece of information that a Device records. A few examples include uptime, free memory, battery life, current state of power                                                                                                                                                                                                                                                                    |
-| Min Version              | The minimum version that needs to be installed for a Device to receive a particular Release                                                                                                                                                                                                                                                                                                                                            |
-| Organization             | Entity which contains many projects and users. Typically one organization per company.                                                                                                                                                                                                                                                                                                                                                 |
-| Owner Ref                | A user-defined unique identifier which can refer to the "owner" of a Device. Since Memfault wants all your customers data to stay in your own systems, you can use this field to associate a device to a "user" without giving us the user data.                                                                                                                                                                                       |
-| Project                  | A logical warehouse of all the Memfault data related to a particular class of device. Contains Releases, Cohorts, Issues, etc.                                                                                                                                                                                                                                                                                                         |
-| Project Key              | The key that is included in the Header of the HTTP request when sending (or retrieving) data from Memfault servers. This is only allowed/required on certain endpoints. It does not grant access to all API endpoints. For general Auth, refer to the Auth section of the Memfault API Documentation                                                                                                                                   |
-| Release                  | A logical grouping of Artifacts that are usually built from the same revision.                                                                                                                                                                                                                                                                                                                                                         |
-| Revision                 | The VCS version that is associated with the Release. If using Git, this would be the SHA-1 of the commit.                                                                                                                                                                                                                                                                                                                              |
-| Rollout - Normal         | Make a Release available to all Devices in the Cohort immediately                                                                                                                                                                                                                                                                                                                                                                      |
-| Rollout - Staged Release | Make a Release available to Devices in the Cohort incrementally                                                                                                                                                                                                                                                                                                                                                                        |
-| Signature                | A unique identifier generated for each Trace and used for grouping into Issues                                                                                                                                                                                                                                                                                                                                                         |
-| Software Type            | A Software Type is a specific software package that runs on a Device in a multi-component architecture. Example: If a toaster has two MCU's, one which is the main system MCU and the other handles Wi-Fi connections, then there would be two Software Types, one likely called main-fw and the other called wifi-fw. A Software Type has many Software Versions as updates are pushed to the Device.                                 |
-| Symbols                  | The .elf file that is used by Memfault to symbolicate any crash data.                                                                                                                                                                                                                                                                                                                                                                  |
-| Trace                    | A crash or snapshot of the device at a particular moment in time, which can later be converted to a backtrace by Memfault. A Trace can be one of three types: - Trace Event - captures only the program counter (instruction pointer) and the link register (return address) if available - Stack Trace - captures the memory regions of the stack - Coredump Trace - captures most, if not all, relevant memory regions of the system |
-| Software Version         | A Software Version is a single release for a particular Software Type. A single Software Version is associated with one Symbol Software Artifact.                                                                                                                                                                                                                                                                                      |
+| Term                                             | Description                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| ------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Artifact                                         | A file or binary that is uploaded and associated with a Release. This can be a symbol file (.elf) or a firmware binary.                                                                                                                                                                                                                                                                                                                |
+| Build ID                                         | A unique identifier for a given Artifact                                                                                                                                                                                                                                                                                                                                                                                               |
+| Cohort                                           | Grouping of devices. Typical cohorts are "alpha", "beta", and "prod", but these can be any grouping, such as a deployment facility.                                                                                                                                                                                                                                                                                                    |
+| Coredump                                         | A capture of the entire memory space of a Device which will generate a Trace in Memfault                                                                                                                                                                                                                                                                                                                                               |
+| Deployment                                       | When a Release is pushed to a particular Cohort. This means that any Device in the given Cohort will be able to query and update to this Release                                                                                                                                                                                                                                                                                       |
+| Device                                           | An edge device that communicates with Memfault. It can report Events, be updated with new software, grouped into Cohorts, etc.                                                                                                                                                                                                                                                                                                         |
+| Device Serial                                    | The Unique Identifier of a Device                                                                                                                                                                                                                                                                                                                                                                                                      |
+| Device - Active <a name="device-active"></a>     | A device that has reported diagnostics data in the last week.                                                                                                                                                                                                                                                                                                                                                                          |
+| Device - Inactive <a name="device-inactive"></a> | A device that has previously reported diagnostics data, but not in the last week.                                                                                                                                                                                                                                                                                                                                                      |
+| Device - Pending <a name="device-pending"></a>   | A device that has been created but diagnostics data has not yet been received. This can happen when devices have been created via API or CSV upload, or when devices check for OTA updates but are not uploading diagnostics data.                                                                                                                                                                                                     |
+| Event                                            | A small payload of information sent from a Device. There are many types of Events, such as Heartbeat Events, Events, Device install Events, etc.                                                                                                                                                                                                                                                                                       |
+| Event - Device Install                           | Events that are generated during a firmware update procedure tracking progress                                                                                                                                                                                                                                                                                                                                                         |
+| Event - Heartbeat                                | Hourly Events that contain vital information about the health of a Device. Most of the data here is user defined and customizable.                                                                                                                                                                                                                                                                                                     |
+| Event - Trace                                    | Event captured when the device crashes or when the SDK is told to capture a trace manually.                                                                                                                                                                                                                                                                                                                                            |
+| Firmware                                         | The actual firmware binary that is downloaded by the device to install. It can be a raw binary or a .zip containing multiple binaries.                                                                                                                                                                                                                                                                                                 |
+| Fleet                                            | All Devices of a Project                                                                                                                                                                                                                                                                                                                                                                                                               |
+| Hardware Version                                 | The version of hardware of the Device. Since hardware companies typically have many revision of their product through stages of manufacturing (evt, dvt, pvt), this can be used to surface those differences. One can upload different Artifacts in the same release for different Hardware Versions                                                                                                                                   |
+| Issue                                            | A logical grouping of Traces with the same signature.                                                                                                                                                                                                                                                                                                                                                                                  |
+| Issue State - Open                               | An Issue has not yet been fixed and remains in the list of Issues                                                                                                                                                                                                                                                                                                                                                                      |
+| Issue State - Resolved                           | An Issue has been closed and will no longer appear in the list of Issues                                                                                                                                                                                                                                                                                                                                                               |
+| Metric                                           | A key-value pair representing a useful piece of information that a Device records. A few examples include uptime, free memory, battery life, current state of power                                                                                                                                                                                                                                                                    |
+| Min Version                                      | The minimum version that needs to be installed for a Device to receive a particular Release                                                                                                                                                                                                                                                                                                                                            |
+| Organization                                     | Entity which contains many projects and users. Typically one organization per company.                                                                                                                                                                                                                                                                                                                                                 |
+| Owner Ref                                        | A user-defined unique identifier which can refer to the "owner" of a Device. Since Memfault wants all your customers data to stay in your own systems, you can use this field to associate a device to a "user" without giving us the user data.                                                                                                                                                                                       |
+| Project                                          | A logical warehouse of all the Memfault data related to a particular class of device. Contains Releases, Cohorts, Issues, etc.                                                                                                                                                                                                                                                                                                         |
+| Project Key                                      | The key that is included in the Header of the HTTP request when sending (or retrieving) data from Memfault servers. This is only allowed/required on certain endpoints. It does not grant access to all API endpoints. For general Auth, refer to the Auth section of the Memfault API Documentation                                                                                                                                   |
+| Release                                          | A logical grouping of Artifacts that are usually built from the same revision.                                                                                                                                                                                                                                                                                                                                                         |
+| Revision                                         | The VCS version that is associated with the Release. If using Git, this would be the SHA-1 of the commit.                                                                                                                                                                                                                                                                                                                              |
+| Rollout - Normal                                 | Make a Release available to all Devices in the Cohort immediately                                                                                                                                                                                                                                                                                                                                                                      |
+| Rollout - Staged Release                         | Make a Release available to Devices in the Cohort incrementally                                                                                                                                                                                                                                                                                                                                                                        |
+| Signature                                        | A unique identifier generated for each Trace and used for grouping into Issues                                                                                                                                                                                                                                                                                                                                                         |
+| Software Type                                    | A Software Type is a specific software package that runs on a Device in a multi-component architecture. Example: If a toaster has two MCU's, one which is the main system MCU and the other handles Wi-Fi connections, then there would be two Software Types, one likely called main-fw and the other called wifi-fw. A Software Type has many Software Versions as updates are pushed to the Device.                                 |
+| Symbols                                          | The .elf file that is used by Memfault to symbolicate any crash data.                                                                                                                                                                                                                                                                                                                                                                  |
+| Trace                                            | A crash or snapshot of the device at a particular moment in time, which can later be converted to a backtrace by Memfault. A Trace can be one of three types: - Trace Event - captures only the program counter (instruction pointer) and the link register (return address) if available - Stack Trace - captures the memory regions of the stack - Coredump Trace - captures most, if not all, relevant memory regions of the system |
+| Software Version                                 | A Software Version is a single release for a particular Software Type. A single Software Version is associated with one Symbol Software Artifact.                                                                                                                                                                                                                                                                                      |
