--- a/docs/embedded/steps/reboot-tracking-dependency.mdx
+++ b/docs/embedded/steps/reboot-tracking-dependency.mdx
@@ -1,9 +1,30 @@
+import ProjectAwareTabs from "@site/src/components/ProjectAwareTabs";
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
+
+import AllocateNoinitRegion from "./allocate-noinit-region-and-collect-reboot-info.mdx";
+
 Memfault has a module for tracking and reporting what resets are taking place on
 your platform.
 
-<details>
-
-<summary> nRF5 SDK </summary>
+<ProjectAwareTabs
+  defaultValueFn={details => {
+    if (!details || !details.primaryChip) return "Other";
+    const { primaryChip } = details;
+    if (primaryChip.startsWith("nRF5")) return "nRF5";
+    if (primaryChip === "STM32") return "STM32";
+    if (primaryChip === "EFR32/EFM32") return "EFR32/EFM32";
+    return "Other";
+  }}
+  values={[
+    { label: "nRF5 SDK", value: "nRF5" },
+    { label: "STM32", value: "STM32" },
+    { label: "NXP S32 SDK", value: "NXP" },
+    { label: "EFM/EFR (Gecko SDK)", value: "EFR32/EFM32" },
+    { label: "Other", value: "Other" },
+  ]}
+>
+  <TabItem value="nRF5">
 
 Add the following file to your build system:
 
@@ -11,29 +32,10 @@ Add the following file to your build system:
   ${MEMFAULT_SDK_ROOT}/ports/nrf5_sdk/memfault_platform_metrics.c
 ```
 
-</details>
+  </TabItem>
+  <TabItem value="STM32">
 
-<details>
-
-<summary> Other </summary>
-
-#### Implement `memfault_reboot_reason_get()`
-
-<details>
-
-<summary> EFM/EFR (Gecko SDK) </summary>
-
-Add the following file to your build system:
-
-```
-  ${MEMFAULT_SDK_ROOT}/ports/emlib/rmu_reboot_tracking.c
-```
-
-</details>
-
-<details>
-
-<summary> STM32CubeF4 </summary>
+#### STM32CubeF4
 
 Add the following file to your build system:
 
@@ -41,11 +43,7 @@ Add the following file to your build system:
   ${MEMFAULT_SDK_ROOT}/ports/stm32cube/f4/rcc_reboot_tracking.c
 ```
 
-</details>
-
-<details>
-
-<summary> STM32CubeL4 </summary>
+#### STM32CubeL4
 
 Add the following file to your build system:
 
@@ -53,11 +51,7 @@ Add the following file to your build system:
   ${MEMFAULT_SDK_ROOT}/ports/stm32cube/l4/rcc_reboot_tracking.c
 ```
 
-</details>
-
-<details>
-
-<summary> STM32CubeWB </summary>
+#### STM32CubeWB
 
 Add the following file to your build system:
 
@@ -65,11 +59,10 @@ Add the following file to your build system:
   ${MEMFAULT_SDK_ROOT}/ports/stm32cube/wb/rcc_reboot_tracking.c
 ```
 
-</details>
+<AllocateNoinitRegion />
 
-<details>
-
-<summary> NXP S32 SDK </summary>
+  </TabItem>
+  <TabItem value="NXP">
 
 Add the following file to your build system:
 
@@ -77,14 +70,24 @@ Add the following file to your build system:
   ${MEMFAULT_SDK_ROOT}/ports/s32sdk/rcm_reboot_tracking.c
 ```
 
-</details>
+<AllocateNoinitRegion />
 
-<details>
+  </TabItem>
+  <TabItem value="EFR32/EFM32">
 
-<summary> Other </summary>
+Add the following file to your build system:
 
-Implement the following function for your MCU. The ports listed above serve as a
-good reference.
+```
+  ${MEMFAULT_SDK_ROOT}/ports/emlib/rmu_reboot_tracking.c
+```
+
+<AllocateNoinitRegion />
+
+  </TabItem>
+  <TabItem value="Other">
+
+Implement the following function for your MCU. The ports listed in other tabs
+serve as a good reference.
 
 ```c
 //! @file memfault_platform_port.c
@@ -102,31 +105,7 @@ void memfault_reboot_reason_get(sResetBootupInfo *info) {
 }
 ```
 
-</details>
+<AllocateNoinitRegion />
 
-#### Allocate noinit region & Collect Reboot Info
-
-Add the following to your `memfault_platform_port.c`
-
-```c
-//! @file memfault_platform_port.c
-
-MEMFAULT_PUT_IN_SECTION(".noinit.mflt_reboot_tracking")
-static uint8_t s_reboot_tracking[MEMFAULT_REBOOT_TRACKING_REGION_SIZE];
-
-void memfault_platform_reboot_tracking_boot(void) {
-  sResetBootupInfo reset_info = { 0 };
-  memfault_reboot_reason_get(&reset_info);
-  memfault_reboot_tracking_boot(s_reboot_tracking, &reset_info);
-}
-```
-
-:::note
-
-It's expected that `s_reboot_tracking` is placed in "noinit" RAM. That is, a
-region of RAM not initialized on bootup or used by your bootloaders. This can be
-achieved by adding a "noinit" section to your linker script.
-
-:::
-
-</details>
+  </TabItem>
+</ProjectAwareTabs>
