MFLT-3404: Document adding memory regions to coredump (#64)
 ### Summary

Write a section in coredumps.mdx to explain how users
can add specific sections to the coredump saved data.

 ### Test Plan

Review doc update for corectness by following the tutorial
and verifying expected results.

Co-authored-by: mrfirmware <mrfirmware@users.noreply.github.com>

--- a/docs/embedded/coredumps.mdx
+++ b/docs/embedded/coredumps.mdx
@@ -193,25 +193,16 @@ _Globals & Statics_ display of the Memfault _Issues->Coredump_ page.
 
 This scenario is slightly different from the previous example in that we wish to
 capture particular variables, possibly from many different source files, in the
-coredump. For this we need to create a new section in the linker file and use
-compiler directives to place these important variables in the new section.
-Memfault provides a convenience macro, `MEMFAULT_PUT_IN_SECTION()`, to help with
-this.
+coredump. For this we need to place variables in a named section so they can be
+collected by the linker into a single region of memory. Use compiler directives
+to place these important variables in the named section. Memfault provides a
+convenience macro, `MEMFAULT_PUT_IN_SECTION()`, to help with this.
 
-:::note
+In the default `.bss` and `.data` sections in the linker script, collect the
+names sections as shown below (highlighted). We still need the start and end
+labels to add them to the coredump region list.
 
-This has implications for your startup code. For zero initialized variables you
-need to explicitly zero them before use and for value initialized variables you
-will need to copy the initial values into the variables before use. This is
-because the default C run-time will not be aware of your special section. See
-the call to `initialize_memfault_sections()` in the example below.
-
-:::
-
-Create sections in the linker script as shown below (highlighted) and be sure to
-include the load memory address (LMA) label too.
-
-```c {14-19,29-34,41}
+```c {9-11,22-24}
 /* linker-script.ld
 */
 SECTIONS {
@@ -220,39 +211,27 @@ SECTIONS {
     {
         __data_start__ = .;
         *(.data*)
+        memfault_data_start = .;
+        *(.memfault_data.*)
+        memfault_data_end = .;
         __data_end__ = .;
     } >RAM AT>FLASH
 
     [...]
-
-    .memfault_data :
-    {
-        memfault_data_start = .;
-        *(.memfault_data.*)
-        memfault_data_end = .;
-    } >RAM AT>FLASH /* <-- copy whatever names are used for the default .data section */
 
     .bss (NOLOAD) :
     {
         __bss_start__ = .;
         *(.bss*)
         *(COMMON)
-        __bss_end__ = .;
-    } >RAM
-
-    .memfault_bss (NOLOAD) :
-    {
         memfault_bss_start = .;
         *(.memfault_bss*)
         memfault_bss_end = .;
+        __bss_end__ = .;
     } >RAM
 
     [...]
 }
-
-/* Needed to copy the intial values into variables.
-*/
-PROVIDE(memfault_data_lma_start = LOADADDR(.memfault_data))
 ```
 
 Like before, add these two regions to your
@@ -260,9 +239,8 @@ Like before, add these two regions to your
 names, `memfault_xxx_yyy`, as in the previous example please refer back to the
 previous code snippet as it is valid for this example as well.
 
-Now allocate some variables to these sections. It is up to you to allocate
-variables appropriately as zero initialized (.bss) or value initialized (.data).
-For this example place variables from two source files into the new sections.
+Now allocate some variables to these sections. For this example, place variables
+from two source files into the new sections.
 
 ```c
 // --- file1.c ---
@@ -284,57 +262,17 @@ int bar(void) {
   static char s_num_resources = 12;
   [...]
 }
-```
 
-If you do nothing more you will find that these variables have indeterminate
-values when you run the program. You need to initialize them in order for them
-to have the correct values. The simple function shown below will ensure that the
-variables are properly initialized. Be sure no accesses are made to these
-variables until after this function is called.
-
-```c
-// --- main.c ---
-[...]
-
-static void initialize_memfault_sections(void) {
-  extern uint32_t memfault_data_start[];
-  extern uint32_t memfault_data_lma_start[];
-  extern uint32_t memfault_data_end[];
-  extern uint32_t memfault_bss_start[];
-  extern uint32_t memfault_bss_end[];
-
-  if ((uintptr_t)memfault_bss_start < (uintptr_t)memfault_bss_end) {
-     const size_t bss_size = (uintptr_t)memfault_bss_end -
-         (uintptr_t)memfault_bss_start;
-     memset(memfault_bss_start, 0, bss_size);
-  }
-
-  if ((uintptr_t)memfault_data_start < (uintptr_t)memfault_data_end) {
-     const size_t data_size = (uintptr_t)memfault_data_end -
-         (uintptr_t)memfault_data_start;
-     memcpy(memfault_data_start, memfault_data_lma_start, data_size);
-  }
-}
-
-int main(void) {
-  // Must be called before any of these section variables are used.
-  initialize_memfault_sections();
-
-  // Safe to use variables.
-  bar();
-
-  [...]
-}
 ```
 
 #### Locating Sections at a Specific Location
 
 Another benefit working with linker scripts is the ability to place objects or
-files' data at specific locations or addresses. Often times microcontrollers
-(MCUs) have special memory regions that have some unique characteristic you may
-wish to take advantage of. Also, it is common to share regions of memory between
+files' data at specific locations or addresses. Often microcontrollers (MCUs)
+have special memory regions that have some unique characteristic you may wish to
+take advantage of. Also, it is common to share regions of memory between
 separate applications on one MCU like a bootloader and the production
-application. Lastly, is often the case that you need to persist information
+application. Lastly, it is often the case that you need to persist information
 across reboots.
 
 In these instances the linker script allows control over the placement and
@@ -342,6 +280,16 @@ allocation of objects in the MCU's address space. The following example
 demonstrates how to locate DMA buffers in on-chip "fast" RAM and allocate a
 shared memory area between a bootloader and an application. The linker script
 below shows the section layout with the addition of memory regions.
+
+:::note
+
+This has implications for your startup code. For zero initialized variables you
+need to explicitly zero them before use, if desired, and for value initialized
+variables (not used here) you will need to copy the initial values into the
+variables before use. This is because the default C run-time will not be aware
+of your special sections.
+
+:::
 
 ```c {7-8,15-20,22-27}
 /* linker-script.ld
@@ -370,7 +318,7 @@ SECTIONS {
         shared_start = .;
         *shared_allocations.o(.shared*)
         shared_end = .;
-    } > SHAREDRAM
+    } >SHAREDRAM
 
     .data :
     {
@@ -409,7 +357,7 @@ separate applications could exchange information in common data structures by
 having a shared allocation file linked into both applications.
 
 ```c
-// --- shared_allocations.c ---
+// --- shared_allocations.h ---
 struct Version {
    int major;
    int minor;
@@ -417,6 +365,7 @@ struct Version {
    char description[128];
 };
 
+// --- shared_allocations.c ---
 #include "shared_allocations.h"
 
 MEMFAULT_PUT_IN_SECTION(".shared")
