--- a/embed/android/android-getting-started-guide.mdx
+++ b/embed/android/android-getting-started-guide.mdx
@@ -1,5 +1,7 @@
-import Docs from "@site/docs/android/android-getting-started-guide.mdx";
+---
+title: Getting Started
+---
 
-# Getting Started
+import Docs from "@site/docs/android/android-getting-started-guide.mdx";
 
 <Docs />
