--- a/embed/embedded/arm-cortex-m-guide.mdx
+++ b/embed/embedded/arm-cortex-m-guide.mdx
@@ -1,5 +1,7 @@
-import Docs from "@site/docs/embedded/arm-cortex-m-guide.mdx";
+---
+title: ARM Cortex-M Integration Guide
+---
 
-# ARM Cortex-M Integration Guide
+import Docs from "@site/docs/embedded/arm-cortex-m-guide.mdx";
 
 <Docs />
