--- a/embed/embedded/embedded-self-serve.mdx
+++ b/embed/embedded/embedded-self-serve.mdx
@@ -1,5 +1,7 @@
-import Docs from "@site/docs/embedded/self-serve.mdx";
+---
+title: Embedded Integration Guide
+---
 
-# Embedded Integration Guide
+import Docs from "@site/docs/embedded/self-serve.mdx";
 
 <Docs />
