--- a/embed/embedded/esp32-guide.mdx
+++ b/embed/embedded/esp32-guide.mdx
@@ -1,5 +1,7 @@
-import Docs from "@site/docs/embedded/esp32-guide.mdx";
+---
+title: ESP32 ESP-IDF Integration Guide
+---
 
-# ESP32 ESP-IDF Integration Guide
+import Docs from "@site/docs/embedded/esp32-guide.mdx";
 
 <Docs />
