--- a/embed/embedded/esp8266-rtos-sdk-guide.mdx
+++ b/embed/embedded/esp8266-rtos-sdk-guide.mdx
@@ -1,5 +1,7 @@
-import Docs from "@site/docs/embedded/esp8266-rtos-sdk-guide.mdx";
+---
+title: ESP8266 RTOS Integration Guide
+---
 
-# ESP8266 RTOS Integration Guide
+import Docs from "@site/docs/embedded/esp8266-rtos-sdk-guide.mdx";
 
 <Docs />
