--- a/embed/embedded/nrf-connect-sdk-guide.mdx
+++ b/embed/embedded/nrf-connect-sdk-guide.mdx
@@ -1,5 +1,7 @@
-import Docs from "@site/docs/embedded/nrf-connect-sdk-guide.mdx";
+---
+title: nRF Connect SDK Integration Guide
+---
 
-# nRF Connect SDK Integration Guide
+import Docs from "@site/docs/embedded/nrf-connect-sdk-guide.mdx";
 
 <Docs />
