--- a/docs/embedded/arm-gcc-guide.mdx
+++ b/docs/embedded/arm-gcc-guide.mdx
@@ -4,6 +4,8 @@ title: ARM GCC Getting Started Guide
 sidebar_label: ARM GCC Guide
 ---
 
+import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
+
 This tutorial will go over integrating the
 [trace event](https://github.com/memfault/memfault-firmware-sdk/blob/master/components/include/memfault/core/trace_event.h#L8-L19)
 module of the
@@ -230,13 +232,7 @@ int main(void) {
 At this point data collection for trace events is fully implemented! Now we just
 need to push the data to the Memfault cloud ...
 
-### Create a Project and Get Project Key
-
-Go to https://app.memfault.com/ and from the "Select A Project" dropdown, click
-on "Create Project" to setup your first project such as "smart-sink-dev".
-
-Then navigate to "Settings" -> "General", where you can find the "Project Key"
-which will be used to communicate with Memfault's web services.
+<ProjectAwareCreateAProject />
 
 ### Publish data to the Memfault cloud
 
