--- a/docs/embedded/nrf-connect-sdk-guide.mdx
+++ b/docs/embedded/nrf-connect-sdk-guide.mdx
@@ -4,6 +4,10 @@ title: nRF Connect SDK Integration Guide
 sidebar_label: nRF Connect SDK
 ---
 
+import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
+
 In this guide we will walk through the steps for integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
 a project using the nRF Connect SDK. The integration has been tested against the
@@ -27,7 +31,7 @@ your system!
 
 ## Integration Steps
 
-:::caution
+:::important
 
 This tutorial assumes you have a working
 [nRF Connect SDK Environment](https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/nrf/getting_started.html#getting-started)
@@ -36,7 +40,17 @@ etc)
 
 :::
 
-### Add memfault-firmware-sdk to nrf/west.yml
+### Include memfault-firmware-sdk in the build
+
+<Tabs
+  groupId="nRF_Connect_SDK_version"
+  values={[
+   // { label: 'nRF Connect SDK 1.6.0', value: '^1.6.0'},
+   { label: 'nRF Connect SDK <=1.5.0', value: '<1.6.0'},
+  ]}
+  defaultValue="<1.6.0"
+>
+  <TabItem value="<1.6.0">
 
 You will first need to add the memfault-firmware-sdk to your projects manifest.
 By default, for the nRF Connect SDK this is located at `nrf/west.yml`:
@@ -57,12 +71,8 @@ index 17071f47..84bb97f0 100644
 +      revision: master
 ```
 
-:::caution
-
 There's a couple lines in this file that look similar. Make sure you have added
 this under the "projects:" level.
-
-:::
 
 You will then need to run `west update` to clone the memfault-firmware-sdk:
 
@@ -75,12 +85,34 @@ Initialized empty Git repository in modules/memfault-firmware-sdk/.git/
 --- memfault-firmware-sdk: fetching, need revision master
 ```
 
-### Update Kconfig selections in prj.con
+  </TabItem>
+  <TabItem value="^1.6.0">
 
-Add the appropriate options to your systems `prj.conf`:
+The SDK is part of the West manifest in NCS and is automatically downloaded when
+running `west update`. By default, it is downloaded to
+`<nRF Connect SDK path>/modules/lib/memfault-firmware-sdk/`.
 
-```
-# project specific configuration settings
+  </TabItem>
+</Tabs>
+
+<ProjectAwareCreateAProject />
+
+### Update Kconfig selections in prj.con {#kconfig-section}
+
+<Tabs
+  groupId="nRF_Connect_SDK_version"
+  values={[
+   // { label: 'nRF Connect SDK 1.6.0', value: '^1.6.0'},
+   { label: 'nRF Connect SDK <=1.5.0', value: '<1.6.0'},
+  ]}
+  defaultValue="<1.6.0"
+>
+  <TabItem value="<1.6.0">
+
+Add the appropriate options to your system's `prj.conf`:
+
+```bash
+# Project-specific configuration settings
 
 CONFIG_MEMFAULT=y
 
@@ -91,7 +123,36 @@ CONFIG_MEMFAULT_HTTP_ENABLE=y
 CONFIG_MEMFAULT_ROOT_CERT_STORAGE_NRF9160_MODEM=y
 ```
 
-### Zephyr Patch (nRF Connect SDK < 1.4 only)
+  </TabItem>
+  <TabItem value="^1.6.0">
+
+Add the appropriate options to your system's `prj.conf`:
+
+```bash {3,4}
+# Project-specific configuration settings
+
+CONFIG_MEMFAULT=y
+CONFIG_MEMFAULT_NCS_PROJECT_KEY=<YOUR_PROJECT_KEY>
+```
+
+You can find more details on the available options using `menuconfig`,
+`guiconfig`, and in the Kconfig sources in
+[`modules/memfault-firmware-sdk/ports/zephyr/Kconfig`](https://github.com/memfault/memfault-firmware-sdk/blob/master/ports/zephyr/Kconfig).
+
+  </TabItem>
+</Tabs>
+
+<Tabs
+  groupId="nRF_Connect_SDK_version"
+  values={[
+   // { label: 'nRF Connect SDK 1.6.0', value: '^1.6.0'},
+   { label: 'nRF Connect SDK <=1.5.0', value: '<1.6.0'},
+  ]}
+  defaultValue="<1.6.0"
+>
+<TabItem value="<1.6.0">
+
+### Zephyr Patch
 
 nRF Connect SDK 1.4 and above include a
 [Zephyr patch](https://github.com/zephyrproject-rtos/zephyr/pull/27496/commits/5c1ea3f96b496a82cea89053eb4d2aedef1cde88)
@@ -104,14 +165,6 @@ we have included the patch in the memfault-firmware-sdk:
 $ cd ${ZEPHYR_BASE}
 $ git apply ${MEMFAULT_FIRMWARE_SDK}/ports/zephyr/v2.x/coredump-support.patch
 ```
-
-### Create a Project and Get Project Key
-
-Go to https://app.memfault.com/ and from the "Select A Project" dropdown, click
-on "Create Project" to setup your first project such as "smart-sink-dev".
-
-Then navigate to "Settings" -> "General", where you can find the "Project Key"
-which will be used to communicate with Memfault's web services.
 
 ### Implement Platform Dependencies
 
@@ -159,6 +212,14 @@ void main(void) {
    lte_lc_init_and_connect();
    // ...
 ```
+
+</TabItem>
+<TabItem value="^1.6.0">
+
+You can skip this section.
+
+</TabItem>
+</Tabs>
 
 ### Create trace reasons definition file
 
