Remove accidental pages created from MDX partials (#68)
The warning at the bottom of [this Docusaurus docs
section](https://docusaurus.io/docs/next/creating-pages#routing) says
that any and all components, Markdown files and MDX files under `docs`
will get their own page unless they're excluded with a config setting
that I couldn't find documentation for, or if their path starts with an
underscore.

Pages created accidentally look like this:

- https://docs.memfault.com/docs/embedded/steps/arch-dependencies/
- https://docs.memfault.com/docs/embedded/steps/create-project-key/

I noticed this because I'm working on the DocSearch feature and
Algolia's crawler was showing these pages as search results.

--- a/docs/embedded/arm-cortex-m-guide.mdx
+++ b/docs/embedded/arm-cortex-m-guide.mdx
@@ -4,26 +4,26 @@ title: ARM Cortex-M Integration Guide
 sidebar_label: ARM Cortex-M
 ---
 
-import TryFlow from "./steps/try-flow.mdx";
-import CloneSdk from "./steps/clone-sdk.mdx";
-import AddSources from "./steps/add-sources.mdx";
-import CorePlatformDependencies from "./steps/core-platform-dependencies.mdx";
-import AddBuildId from "./steps/add-build-id.mdx";
-import LoggingDependency from "./steps/logging-dependency.mdx";
-import RtosPorts from "./steps/rtos-ports.mdx";
-import CoredumpDependency from "./steps/coredump-dependency.mdx";
-import RegisterAssert from "./steps/register-assert.mdx";
-import CreateProjectKey from "./steps/create-project-key.mdx";
-import UploadSymbolFile from "./steps/upload-symbol-file.mdx";
-import DataTransferTroubleshooting from "./steps/data-transfer-troubleshooting.mdx";
-import PostChunksLocally from "./steps/post-chunks-locally.mdx";
-import PublishDataToCloud from "./steps/publish-data-to-cloud.mdx";
-import DefineFirstTraceEvent from "./steps/define-first-trace-event.mdx";
-import DefineFirstHeartbeat from "./steps/define-first-heartbeat.mdx";
-import AddCliTestCommands from "./steps/add-cli-test-commands.mdx";
-import FwSdkFeatures from "./steps/sdk-features.mdx";
-import MetricTimerDependency from "./steps/metric-timer-dependency.mdx";
-import RebootTrackingDependency from "./steps/reboot-tracking-dependency.mdx";
+import TryFlow from "./_steps/try-flow.mdx";
+import CloneSdk from "./_steps/clone-sdk.mdx";
+import AddSources from "./_steps/add-sources.mdx";
+import CorePlatformDependencies from "./_steps/core-platform-dependencies.mdx";
+import AddBuildId from "./_steps/add-build-id.mdx";
+import LoggingDependency from "./_steps/logging-dependency.mdx";
+import RtosPorts from "./_steps/rtos-ports.mdx";
+import CoredumpDependency from "./_steps/coredump-dependency.mdx";
+import RegisterAssert from "./_steps/register-assert.mdx";
+import CreateProjectKey from "./_steps/create-project-key.mdx";
+import UploadSymbolFile from "./_steps/upload-symbol-file.mdx";
+import DataTransferTroubleshooting from "./_steps/data-transfer-troubleshooting.mdx";
+import PostChunksLocally from "./_steps/post-chunks-locally.mdx";
+import PublishDataToCloud from "./_steps/publish-data-to-cloud.mdx";
+import DefineFirstTraceEvent from "./_steps/define-first-trace-event.mdx";
+import DefineFirstHeartbeat from "./_steps/define-first-heartbeat.mdx";
+import AddCliTestCommands from "./_steps/add-cli-test-commands.mdx";
+import FwSdkFeatures from "./_steps/sdk-features.mdx";
+import MetricTimerDependency from "./_steps/metric-timer-dependency.mdx";
+import RebootTrackingDependency from "./_steps/reboot-tracking-dependency.mdx";
 
 ## Overview
 
